--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,6 +97,7 @@ body {
 .list-horizontal {
   li {
     display: inline-block;
+    margin-right: 8px;
   }
 }
 
@@ -131,7 +132,7 @@ body {
 
 .post-tags {
   display: flex;
-  
+
   p {
     margin: 0 10px 0 0;
   }
